src/App.css
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

body {
  background-image: url("./assets/backgroundPhoto.png");
  background-repeat: no-repeat;
}

.wrapper {
  max-width: 116rem;
  height: 80rem;
  margin: 0 auto;
  /* border: 2px solid black; */
}

